syntax = "proto3";

package user;

service UserService {
    rpc postUser (UserRequest) returns (UserResponse) {};
}

message User {
    string first_name = 1;
    string last_name = 2;
    string password = 3;
}

message UserRequest {
    User user = 1;
}

message UserResponse {
    string first_name = 1;
    string last_name = 2;
}